# pc-agent-loop-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/android/: Cargo.toml
crates/android/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent_loop.rs  lib.rs
crates/core/src/handler/: generic.rs  mod.rs
crates/core/src/llm/: client.rs  mod.rs  session.rs  types.rs
crates/core/src/tools/: code_run.rs  file_ops.rs  mod.rs
crates/core/src/webdriver/: server.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/src/: main.rs
crates/gui/ui/: index.html
crates/ios/: Cargo.toml
crates/ios/src/: lib.rs
src/: main.rs
src/handler/: generic.rs  mod.rs
src/llm/: mod.rs  session.rs
src/tools/: code_run.rs  file_ops.rs  mod.rs
src/webdriver/: mod.rs  server.rs
