[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/android",
    "crates/ios",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pc-agent-loop contributors"]
license = "MIT"
repository = "https://github.com/lsdefine/pc-agent-loop"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
rand = "0.8"
