[package]
name = "pc-agent-loop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pc-agent-loop"
path = "src/main.rs"

[dependencies]
pc-agent-loop-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
