[package]
name = "pc-agent-loop-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
uuid.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
rand.workspace = true

[features]
default = []
uniffi = ["dep:uniffi"]
windows-gui = []

[dependencies.uniffi]
version = "0.28"
optional = true
