[package]
name = "pc-agent-loop-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pc-agent-loop-gui"
path = "src/main.rs"

[dependencies]
pc-agent-loop-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["fs", "cors"] }
tokio-stream.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
