[package]
name = "pc-agent-loop-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pc-agent-loop-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pc-agent-loop-core = { path = "../core" }
tauri = { version = "2" }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
